--- a/Ghosting Connector/Base.lproj/Main.storyboard
+++ b/Ghosting Connector/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
         <!--Start Page-->
         <scene sceneID="lyP-E7-8NZ">
             <objects>
-                <viewController title="Start Page" id="bwu-1W-6Nv" customClass="StartViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Start Page" id="bwu-1W-6Nv" customClass="StartViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="m0I-I7-ucD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,7 +54,7 @@
         <!--initialLogin-->
         <scene sceneID="BdP-e4-xar">
             <objects>
-                <viewController title="initialLogin" id="a1U-fi-Lwb" customClass="InitialLoginViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="initialLogin" id="a1U-fi-Lwb" customClass="InitialLoginViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HaD-aV-apV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -120,7 +120,7 @@
         <!--Set Your Goals View Controller-->
         <scene sceneID="AAK-Z3-Ea1">
             <objects>
-                <viewController id="dJi-iQ-vOz" customClass="SetYourGoalsViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="dJi-iQ-vOz" customClass="SetYourGoalsViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F5L-zL-PSw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,7 @@
         <!--Create Singular Goal View Controller-->
         <scene sceneID="piE-bk-pCq">
             <objects>
-                <viewController id="PDD-oj-JfH" customClass="CreateSingularGoalViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PDD-oj-JfH" customClass="CreateSingularGoalViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Fj-p4-cAN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -297,7 +297,7 @@
         <!--Create Goals Table View Controller-->
         <scene sceneID="lR0-T0-p9K">
             <objects>
-                <tableViewController id="Jze-bU-5ex" customClass="CreateGoalsTableViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Jze-bU-5ex" customClass="CreateGoalsTableViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" minimumZoomScale="-1" maximumZoomScale="-1" dataMode="prototypes" style="plain" separatorStyle="none" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bmp-Rf-Aat">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="386"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -334,7 +334,7 @@
         <!--Numbered Workout View Controller-->
         <scene sceneID="7wh-8q-o6Z">
             <objects>
-                <viewController id="x0X-u5-1M6" customClass="NumberedWorkoutViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="x0X-u5-1M6" customClass="NumberedWorkoutViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gnv-4u-nry">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -450,11 +450,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fz3-dW-vhS">
-                                <rect key="frame" x="20" y="44" width="59" height="40"/>
+                                <rect key="frame" x="0.0" y="44" width="59" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="back"/>
                                 <connections>
-                                    <action selector="goBack:" destination="at1-VZ-0TC" eventType="touchUpInside" id="obT-0d-R84"/>
+                                    <action selector="goBack:" destination="x0X-u5-1M6" eventType="touchUpInside" id="SXg-Bp-DEC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -480,7 +480,7 @@
         <!--Home Page-->
         <scene sceneID="bXg-Yu-doi">
             <objects>
-                <viewController title="Home Page" id="H9u-zo-5jr" customClass="HomePageViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Home Page" id="H9u-zo-5jr" customClass="HomePageViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TUI-V5-8HJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -526,10 +526,10 @@
                                     <accessibilityTraits key="traits" notEnabled="YES"/>
                                 </accessibility>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5Z-VG-aLo">
-                                <rect key="frame" x="29" y="69" width="379" height="55"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g5Z-VG-aLo">
+                                <rect key="frame" x="29" y="69" width="324" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="42"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -558,7 +558,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rbw-Mt-h8c">
-                                <rect key="frame" x="361" y="55" width="25" height="26"/>
+                                <rect key="frame" x="343" y="44" width="51" height="47"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="gear"/>
                                 <connections>
@@ -584,7 +584,7 @@
         <!--Main View Goals View Controller-->
         <scene sceneID="8Pc-GB-Pe5">
             <objects>
-                <viewController id="XpF-kv-tTd" customClass="MainViewGoalsViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XpF-kv-tTd" customClass="MainViewGoalsViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2JS-gO-Wix">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -639,13 +639,13 @@
         <!--ViewYourGoalsTableViewController-->
         <scene sceneID="Lya-Tw-mPw">
             <objects>
-                <tableViewController title="ViewYourGoalsTableViewController" id="S1J-j2-fSy" customClass="ViewYourGoalsTableViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="ViewYourGoalsTableViewController" id="S1J-j2-fSy" customClass="ViewYourGoalsTableViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="gdl-Gk-A1q">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="601"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.077709756790000001" green="0.1185042635" blue="0.1398680508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="viewGoal" rowHeight="88" id="7MS-bD-4EB" customClass="GoalView" customModule="Ghosting_Connector" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="viewGoal" rowHeight="88" id="7MS-bD-4EB" customClass="GoalView" customModule="Ghost_Connect" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="88"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7MS-bD-4EB" id="sXk-Bj-xZe">
@@ -687,7 +687,7 @@
         <!--Do Timed Workout View Controller-->
         <scene sceneID="dhf-Z0-qEF">
             <objects>
-                <viewController id="xlN-GH-EKa" customClass="DoTimedWorkoutViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="xlN-GH-EKa" customClass="DoTimedWorkoutViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B8R-7J-wK4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -723,7 +723,7 @@
         <!--Timed Workout View Controller-->
         <scene sceneID="Mo6-4D-3ut">
             <objects>
-                <viewController id="OzQ-ta-Cac" customClass="TimedWorkoutViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="OzQ-ta-Cac" customClass="TimedWorkoutViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jqH-z6-q9K">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -871,16 +871,15 @@
                                 <size key="shadowOffset" width="-1" height="-1"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pr-Vw-U2g">
-                                <rect key="frame" x="12" y="44" width="59" height="40"/>
+                                <rect key="frame" x="0.0" y="44" width="59" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="back"/>
                                 <connections>
                                     <action selector="goBack:" destination="OzQ-ta-Cac" eventType="touchUpInside" id="cun-vS-iri"/>
-                                    <action selector="goBack:" destination="at1-VZ-0TC" eventType="touchUpInside" id="xaa-vh-5bt"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timed Workout :" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="287-zp-TuL">
-                                <rect key="frame" x="32" y="92" width="292" height="118"/>
+                                <rect key="frame" x="36" y="92" width="292" height="118"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -912,7 +911,7 @@
         <!--Settings View Controller-->
         <scene sceneID="wWZ-ON-PPy">
             <objects>
-                <viewController id="at1-VZ-0TC" customClass="SettingsViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="at1-VZ-0TC" customClass="SettingsViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ugf-ez-u3H">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -986,7 +985,7 @@
         <!--Change Name View Controller-->
         <scene sceneID="shd-dF-sdQ">
             <objects>
-                <viewController id="C3Q-2g-iP5" customClass="ChangeNameViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="C3Q-2g-iP5" customClass="ChangeNameViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4YS-j9-qaq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1043,7 +1042,7 @@
         <!--How To Connect View Controller-->
         <scene sceneID="KLl-9E-Fca">
             <objects>
-                <viewController id="Ldv-hu-VSK" customClass="HowToConnectViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Ldv-hu-VSK" customClass="HowToConnectViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F9S-n7-ILR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1087,7 +1086,7 @@
         <!--addGoalViewController-->
         <scene sceneID="WLb-am-RWz">
             <objects>
-                <viewController title="addGoalViewController" id="WZo-EC-FUV" customClass="AddGoalViewController" customModule="Ghosting_Connector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="addGoalViewController" id="WZo-EC-FUV" customClass="AddGoalViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qhY-XR-q1T">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
